--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <pre>
+        <form action="">
+            <input type="text">
+            <button type="submit">
+                Potwierdź
+            </button>
+        </form>
+    </pre>
 </body>
 </html>
