--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <button type="submit">
                 Potwierdź
             </button>
+            Te zmieny maja sa testowe
         </form>
     </pre>
 </body>
