--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             </button>
             Te zmieny maja sa testowe
         </form>
+        <img src="" alt="">
     </pre>
 </body>
 </html>
