--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" type="text/css" />
     <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
     
     <div class="container">
         <div class="head">
-            
+            Strona 
         </div>
 
         <div class="left">
-
+            <a href="http://www.onet.pl">onet</a>
         </div>
 
         <div class="right">
