--- a/index.html
+++ b/index.html
@@ -13,11 +13,24 @@
     
     <div class="container">
         <div class="head">
-            Strona 
+            <ol>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Dwa</a>
+                </li>
+                <li>
+                    <a href="#">Trzy</a>
+                </li>
+                <li>
+                    <a href="#">Cztery</a>
+                </li>
+            </ol>
         </div>
 
         <div class="left">
-            <a href="http://www.onet.pl">onet</a>
+            <a class="a" href="http://www.onet.pl">onet</a>
         </div>
 
         <div class="right">
