--- a/index.html
+++ b/index.html
@@ -17,14 +17,47 @@
                 <li>
                     <a href="#">Home</a>
                 </li>
-                <li>
-                    <a href="#">Dwa</a>
+                <li><a href="#">Dwa</a>
+                    <ul>
+                            <li><a href="#">one</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#">teo</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#">three</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="#">four</a></li>
+                    </ul>
                 </li>
-                <li>
-                    <a href="#">Trzy</a>
+                <li><a href="#">Trzy</a>
+                <ul>
+                        <li><a href="#">one</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">teo</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">three</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">four</a></li>
+                </ul>
                 </li>
-                <li>
-                    <a href="#">Cztery</a>
+                <li><a href="#">Cztery</a>
+                    <ul>
+                        <li><a href="#">one</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">teo</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">three</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">four</a></li>
+                </ul>
                 </li>
             </ol>
         </div>
