--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             <div id="container">
         <form action="">
             Login
-            <input type="text">
+            <input type="text" placeholder="Login">
             <br><br>
             Hasło
-            <input type="password">
+            <input type="password" placeholder="Hasło" onfocus="this.placeholder=''" onblur="this.placeholder='Hasło'">
             <br><br>
             <input type="submit" value="Zaloguj się" name="" id="">
         </form>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="right">
-
+            
         </div>
 
         <div class="footer">
